src/parse/snapshots/dilaria__parse__test__primary__true.snap
---
source: src/parse/test.rs
expression: ast
---
Literal(
    Boolean(
        true,
        Span(
            0..0,
        ),
    ),
)
