src/parse/snapshots/dilaria__parse__test__primary__two_array_literal.snap
---
source: src/parse/test.rs
expression: ast
---
Literal(
    Array(
        [
            Literal(
                Number(
                    10.0,
                    Span(
                        0..0,
                    ),
                ),
            ),
            Literal(
                Number(
                    10.0,
                    Span(
                        0..0,
                    ),
                ),
            ),
        ],
        Span(
            0..0,
        ),
    ),
)
